<resources>
    <string name="app_name">Records</string>
    <string name="action_settings">Settings</string>
    <string name="flower_name_placeholder">Fleet Name</string>
    <string name="fleet_name_placeholder">Fleet Name</string>
    <string name="permissions_not_granted_read_phone_state">Permission to read sim is not granted.</string>
    <string name="make_name_placeholder">Make</string>
    <string name="model_name_placeholder">Model</string>
    <string name="regno_filter">Enter Registration No</string>
    <string name="srch">Search..</string>
    <string name="dim">Dimension</string>
    <string name="sample_pdf_url">http://partners.adobe.com/public/developer/en/xml/AdobeXMLFormsSamples.pdf</string>
    <string name="downloaded_wait">Download Complete. Now opening PDF, Wait a moment please...</string>
    <string name="title_activity_filling">FillingActivity</string>
    <string name="station_name_placeholder">ServiceStation:</string>
    <string name="okm_placeholder">OKM:</string>
    <string name="ckm_placeholder">CKM:</string>
    <string name="qty_placeholder">Qty:</string>
    <string name="fdate_placeholder">FilledOn:</string>
    <string name="mileage_placeholder">Mileage:</string>
    <string name="filleduser_placeholder">User:</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="sdate_placeholder">ServiceDate:</string>
    <string name="skm_placeholder">Reading(KM):</string>
    <string name="sprice_placeholder">Rs.</string>
    <string name="sdesc_placeholder">ServiceItem</string>
    <string name="error_network_timeout">Network time ut error</string>
    <string name="pleaseWait">Please wait</string>
    <string name="webpage_being_loaded">Loading in progress</string>
    <string name="record_icon">Record list icon</string>
    <string name="record_header">Record header</string>
</resources>
