<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/fleet_name_placeholder"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_alignParentTop="true"
        android:text="@string/fleet_name_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/tvFleetMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_below="@id/textView1"
        android:text="@string/make_name_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/tvFleetModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_below="@id/tvFleetMake"
        android:text="@string/model_name_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
